fixed border radius on ie9

--- a/views/utils.sass
+++ b/views/utils.sass
@@ -19,7 +19,7 @@
   background: -webkit-gradient(linear, left top, left bottom, from($top), to($bottom))
   background: -moz-linear-gradient(top, $top,  $bottom)
   // FIXME: commented because in ie9 they break border-radius
-  //  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$top}', endColorstr='#{$bottom}')
+  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$top}', endColorstr='#{$bottom}')
 
 @mixin button
   display: inline-block
